--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -14,4 +14,16 @@
 <link rel="icon" href="/images/favicon.ico"/>
 <meta name="theme-color" content="#ffffff"/>
 
+<!-- MathJax for LaTeX rendering -->
+<script>
+  window.MathJax = {
+    tex: {
+      inlineMath: [['$', '$'], ['\\(', '\\)']],  // 支持 $...$ 和 \(...\)
+      displayMath: [['$$', '$$'], ['\\[', '\\]']] // 支持 $$...$$ 和 \[...\]
+    }
+  };
+</script>
+<script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" async></script>
+
+
 <!-- end custom head snippets -->
